[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"] 
include = ["*"] 
exclude = []  
namespaces = false 

[project]
name = "semantic_spectral_entropy"
version = "0.0.1"
authors = [
  { name="Yi Liu", email="" },
]
description = "Semantic Spectral Entropy"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
"numpy",
"pandas",
"scikit-learn",
"collections", 
"itertools"
]